--- a/README.rdoc
+++ b/README.rdoc
@@ -24,5 +24,9 @@ Things you may want to cover:
 * ...
 
 
-Please feel free to use a different markup language if you do not plan to run
+=== Salesforce Integration
+
+References:
+https://github.com/ejholmes/restforce
+
 <tt>rake doc:app</tt>.
